# applsci-2022

./: README.md
src/: README.md  instruction.txt
src/R/: data_io.R  data_process.R  plots.R
src/ampl/: PP.model  base-model.model  base-model.run  extended-model.model  extended-model.run
src/cpp/: CMakeLists.txt  instrukcja.txt  main.cpp
src/cpp/Algorithms/: Algorithms.h  Bee.cpp  Bee.h  BeeColony.cpp  BeeColony.h  CMakeLists.txt  DFS.cpp  DFS.h  EvolutionaryAlgorithm.cpp  EvolutionaryAlgorithm.h
src/cpp/Model/: Bee.cpp  Bee.h  CMakeLists.txt  Car.cpp  Car.h  Country.cpp  Country.h  DFS.cpp  DFS.h  Model.h  MyArc.cpp  MyArc.h  MyRealisation.cpp  MyRealisation.h  MyVertex.cpp  MyVertex.h  Network.cpp  Network.h  Path.cpp  Path.h  Writer.cpp  Writer.h
src/cpp/Network/: Car.cpp  Car.h  Country.cpp  Country.h  MyArc.cpp  MyArc.h  MyRealisation.cpp  MyRealisation.h  MyVertex.cpp  MyVertex.h  Network.cpp  Network.h  Path.cpp  Path.h  Writer.cpp  Writer.h
